Исправил инициализацию списка cars в CarServiceImpl, исправил метод getCars.